tests/snapshots/examples_fixtures/type_system__failing__26_adt_match_constructor_arity_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/26_adt_match_constructor_arity_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/26_adt_match_constructor_arity_mismatch.flx:8:5
   |
 8 |     match x {
   |     ^^^^^^^^^
 9 |         Pair(a) -> a,
   | ^^^^^^^^^^^^^^^^^^^^^
10 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.


error[E085]: Constructor Pattern Arity Mismatch

Constructor pattern `Pair` expects 2 argument(s) but got 1.

  examples/type_system/failing/26_adt_match_constructor_arity_mismatch.flx:9:9
  |
9 |         Pair(a) -> a,
  |         ^^^^^^^

Hint:
  Check the constructor's declared pattern field count.

Found 2 errors.
== stdout ==
<not executed>
